Changes for 1.1beta5:

 - terminology change: trigger's 'description' -> 'name' (Alexei)
 - new macro for actions {TRIGGER.NAME} (Alexei)
 - added Graphs synchronization for linked hosts (Eugene)
 - fixed processing of Delta (Alexei)
 - minor fixes for SNMP handling (Alexei)
 - make possible combination of FLOAT and UINT history in a graph (Alexei)
 - use english translation if cannot find local phrase (Alexei)
 - added Chinese translation. (Alexei)
 - updated German translation. Thanks to Julian. (Alexei)
 - fixed processing of icmpping and icmppingsec (Alexei)
 - seperartion of LDFLAGS and LIBS in all Makefile.am (Alexei)
 - fixed MySQL-related configuration and making issues (Alexei)
 - fixed incorrect handling of retrieved values in zabbix_get (Alexei)
 - fixed processing of simple checks (Alexei)
 - new concept of defenition of actions, one screen (Alexei)
 - new fields for table 'actions' (Alexei)
 - new item value type: integer 64bit (Alexei)
 - improved Triggers synchronization for linked hosts (Eugene)
 - added Actions synchronization for linked hosts (Eugene)
 - calculated minimum Y in graphs (Alexei)
 - added configurable number of plain text elements for screens (Alexei)
 - added screens_items.elements (Alexei)
 - escalations removed from GUI (Alexei)
 - fixed typo in tr_comments.php (Alexei)

Changes for 1.1beta4:

 - fixed system.swap.size (Eugene)
 - fixed vm.memory.size (Eugene)
 - fixed configuration file parsing for user specifed functions (Eugene)
 - added support of system.cpu.load for Tru64 (Eugene)
 - added support of system.cpu.util for Tru64 (Eugene)
 - added support of vm.memory.size for Tru64 (Eugene)
 - added support of proc.num for Tru64 (Eugene)
 - fixed processing of UserParameters which are pre/postfixed with spaces (Alexei)
 - fixed processing of SNMP and simple checks (Alexei)
 - fixed compilation with --with-ldap (Alexei)
 - SNMP string values to be automatically converted to numeric (Alexei)